# Kazakh-Hub

./: AUTH_FLOW.md  FIREBASE_API_KEY_FIX.md  FIREBASE_DOMAIN_FIX.md  FIREBASE_SETUP.md  TODAY_WORK_SUMMARY.md
My Terminal/: .env  .gitignore  BUILD_INSTRUCTIONS.md  FIX_DLL_ERROR.md  N3XUS-OS.bat  VERSION_INFO.md  copy_dlls.bat
My Terminal/src/: Banner.cpp  Banner.hpp  CommandExecutor.hpp  VFS.cpp  main.cpp
My Terminal/src/commands/: CpCommand.hpp  DirCommand.cpp  DirCommand.hpp  MkdirCommand.cpp  MkdirCommand.hpp
backend/: README.md  config.py  database.py  firestore_sync.py  main.py  requirements.txt  run.sh
backend/data/: friendRequests.json  friends.json  messages.json  passwords.json  users.json
backend/models/: __init__.py  code.py  friend.py  message.py  user.py
backend/routes/: __init__.py  auth.py  chats.py  codes.py  friends.py  messages.py  users.py  websocket.py
backend/services/: __init__.py  chat_service.py  code_service.py  friend_service.py  message_service.py  user_service.py
backend/utils/: __init__.py  validators.py
backend/websocket/: __init__.py  manager.py
frontend/: .env  .env.example  FIREBASE_API_KEY_FIX_NOW.md  FIREBASE_API_KEY_FIX_STEPS.md  FLEXBOX_VS_ABSOLUTE.md  README.md  SIDEBAR_LAYOUT_ANALYSIS.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: README_LOGO.md  index.html
frontend/src/: .env  App.tsx  index.tsx  vite-env.d.ts
frontend/src/components/: BrainCircuitIcon.tsx  Button.css  Button.tsx  ChangeBackgroundModal.css  ChangeBackgroundModal.tsx  Chat.css  Chat.tsx  CodeCard.css  CodeCard.tsx  CodeEditor.css  CodeEditor.tsx  CodeItem.css  CodeItem.tsx  CodesListModal.css  CodesListModal.tsx  CursorTrail.css  CursorTrail.tsx  EditProfileModal.css  EditProfileModal.tsx  FileExplorer.css  FolderItem.css  FolderItem.tsx  FolderUploadItem.css  FolderUploadItem.tsx  Footer.css  Footer.tsx  Header.css  (+17 more)
kazakh-hub/: .env  FLEXBOX_VS_ABSOLUTE.md  package-lock.json  package.json  vite.config.ts
kazakh-hub/backend/: README.md  package-lock.json  package.json  server.js
kazakh-hub/public/: logo.png.placeholder
kazakh-hub/src/: App.tsx
nairee_cli/: CMakeLists.txt  QUICK_START.md  QUICK_START_N3XUS.md  README_N3XUS.md  START_N3XUS.bat  START_TERMINAL.md  build.bat  run.bat  run.ps1  run.sh  test_terminal.bat
nairee_cli/docs/: structure.md
nairee_cli/src/: CommandExecutor.cpp  CommandParser.cpp  CommandParser.hpp  Terminal.cpp  Terminal.hpp  VFS.hpp
nairee_cli/src/commands/: CdCommand.cpp  CdCommand.hpp  CpCommand.cpp  HelpCommand.cpp  HelpCommand.hpp  LsCommand.cpp  LsCommand.hpp  UserInfoCommand.cpp  UserInfoCommand.hpp
(+76 files in other folders)
